--- a/raw_data_transformation.ipynb
+++ b/raw_data_transformation.ipynb
@@ -1844,10 +1844,10 @@
        "Stucco      37\n",
        "AsbShng     34\n",
        "BrkComm      5\n",
-       "AsphShn      2\n",
        "CBlock       2\n",
-       "PreCast      1\n",
+       "AsphShn      2\n",
        "ImStucc      1\n",
+       "PreCast      1\n",
        "Name: Exterior1st, dtype: int64"
       ]
      },
@@ -4802,7 +4802,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f7f1f2da5e0>"
+       "<matplotlib.collections.PathCollection at 0x7f9a37e2a1c0>"
       ]
      },
      "execution_count": 148,
@@ -4982,7 +4982,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f7f1f7fcfd0>"
+       "<matplotlib.collections.PathCollection at 0x7f9a38954bb0>"
       ]
      },
      "execution_count": 155,
@@ -6532,8 +6532,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split Test Train "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6542,7 +6549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6554,7 +6561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -6565,7 +6572,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6579,7 +6586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6588,7 +6595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
