geo now in data transform- takes like 20min to run

--- a/Geo Stuff.ipynb
+++ b/Geo Stuff.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdata = pd.read_csv('merge_data_update.csv', index_col=0)"
+    "tdata = pd.read_csv('merge_data_update.csv', index_col=0)\n",
+    "locator = Nominatim(user_agent=\"myGeocoder\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,27 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.734598028892784"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "great_circle(r, UofIowa).km"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +95,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,11 +117,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "tdata['Dist_From_UoI']=tdata.Lat_Long.apply(lambda latlong:  distancetoUoI(latlong))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           436 HAYWARD AVE\n",
+       "1              3416 WEST ST\n",
+       "2              320 S 2ND ST\n",
+       "3          1524 DOUGLAS AVE\n",
+       "4         2304 FILLMORE AVE\n",
+       "               ...         \n",
+       "2575     1021 RIDGEWOOD AVE\n",
+       "2576          3619 MARY CIR\n",
+       "2577    2140 SUNSET DR 2142\n",
+       "2578      5319 CLEMENS BLVD\n",
+       "2579        1025 VERMONT CT\n",
+       "Name: Prop_Addr, Length: 2580, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tdata.Prop_Addr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Location(3416, West Street, Union Drive, Ames, Story County, Iowa, 50014, United States, (42.024855315930424, -93.66367099341755, 0.0))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "locator.geocode('3416 WEST ST, Ames, Iowa')"
    ]
   },
   {
