--- a/data_trans_no_dums.ipynb
+++ b/data_trans_no_dums.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "[2580 rows x 97 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,8 +1839,8 @@
        "Stucco      37\n",
        "AsbShng     34\n",
        "BrkComm      5\n",
-       "AsphShn      2\n",
        "CBlock       2\n",
+       "AsphShn      2\n",
        "ImStucc      1\n",
        "PreCast      1\n",
        "Name: Exterior1st, dtype: int64"
@@ -2818,8 +2818,8 @@
       "TA    2316\n",
       "Gd     101\n",
       "Fa      88\n",
-      "Po       3\n",
       "Ex       3\n",
+      "Po       3\n",
       "Name: BsmtCond, dtype: int64\n",
       "Missing values:  69\n"
      ]
@@ -4645,7 +4645,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f8671bd54f0>"
+       "<matplotlib.collections.PathCollection at 0x7fbab838c4f0>"
       ]
      },
      "execution_count": 149,
@@ -4825,7 +4825,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f8671d4dee0>"
+       "<matplotlib.collections.PathCollection at 0x7fbab8633ee0>"
       ]
      },
      "execution_count": 156,
@@ -4905,7 +4905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -4930,7 +4930,7 @@
        "Name: MSSubClass, dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4943,7 +4943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4956,7 +4956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -4968,7 +4968,7 @@
        "Name: MSSubClass, dtype: int64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4976,6 +4976,30 @@
    "source": [
     "# Check Transformation\n",
     "\n",
+    "tdata['MSSubClass'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "one_story    1389\n",
+       ">1-story     1051\n",
+       "multi_fam     140\n",
+       "Name: MSSubClass, dtype: int64"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tdata['MSSubClass'] = tdata['MSSubClass'].astype('category')\n",
     "tdata['MSSubClass'].value_counts()"
    ]
   },
@@ -4995,7 +5019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -5008,7 +5032,7 @@
        "Name: LotShape, dtype: int64"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5021,7 +5045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5032,7 +5056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -5043,7 +5067,7 @@
        "Name: LotShape, dtype: int64"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5056,7 +5080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5068,7 +5092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -5080,7 +5104,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5099,7 +5123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -5112,7 +5136,7 @@
        "Name: LandContour, dtype: int64"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5125,7 +5149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5136,7 +5160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -5147,7 +5171,7 @@
        "Name: LandContour, dtype: int64"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5160,7 +5184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5172,7 +5196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -5184,7 +5208,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5203,7 +5227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -5217,7 +5241,7 @@
        "Name: LotConfig, dtype: int64"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5230,7 +5254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5241,7 +5265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -5253,7 +5277,7 @@
        "Name: LotConfig, dtype: int64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5266,7 +5290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -5291,7 +5315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -5309,7 +5333,7 @@
        "Name: Condition1, dtype: int64"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5322,7 +5346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5334,7 +5358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -5348,7 +5372,7 @@
        "Name: Condition1, dtype: int64"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5361,7 +5385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -5386,7 +5410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -5400,7 +5424,7 @@
        "Name: BldgType, dtype: int64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5413,7 +5437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5424,7 +5448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -5437,7 +5461,7 @@
        "Name: BldgType, dtype: int64"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5450,7 +5474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -5478,7 +5502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -5851,7 +5875,7 @@
        "[2580 rows x 57 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5862,7 +5886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -5928,7 +5952,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5940,7 +5964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -5962,7 +5986,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6080,7 +6104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6108,7 +6132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6117,7 +6141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6126,7 +6150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -6499,7 +6523,7 @@
        "[2580 rows x 59 columns]"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6517,7 +6541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6526,31 +6550,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     " tdata_train, tdata_test = train_test_split(data_only_ml_cols, test_size=0.33, random_state=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1728, 55)"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tdata_train.shape"
    ]
   },
   {
@@ -6561,10 +6565,30 @@
     {
      "data": {
       "text/plain": [
-       "(852, 55)"
+       "(1728, 55)"
       ]
      },
      "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tdata_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(852, 55)"
+      ]
+     },
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6575,7 +6599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -6948,7 +6972,7 @@
        "[1728 rows x 55 columns]"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6959,7 +6983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6968,7 +6992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
