--- a/ryan_research_questions.ipynb
+++ b/ryan_research_questions.ipynb
@@ -56,11 +56,11 @@
    "metadata": {},
    "source": [
     "Average cost to add a bathroom to your existing space:\n",
-    "$15k (Homeadvisor) (low-cost is $5k)\n",
-    "$7.6k (HomeGuide) https://homeguide.com/costs/cost-to-add-a-bathroom\n",
-    "$7.5k - $10k (Ownerly)\n",
-    "$15k (Angie, previously Angie's List)\n",
-    "$6.5k-$10k (Neighborly)\n",
+    "- 15k (Homeadvisor) (low-cost is \\5k)\n",
+    "- 7.6k (HomeGuide) https://homeguide.com/costs/cost-to-add-a-bathroom\n",
+    "- 7.5k - 10k (Ownerly)\n",
+    "- 15k (Angie, previously Angie's List)\n",
+    " -6.5k-10k (Neighborly)\n",
     "\n",
     "Going to use a $10k estimated cost for adding a bathroom to existing space."
    ]
@@ -97,17 +97,17 @@
    "metadata": {},
    "source": [
     "Cost of kitchen remodel:\n",
-    "- Average midrange ktichen remodel, $66k (2019, REmodeling Magazine)\n",
-    "- Major remodel (but not upscale), $69k (Home Depot)\n",
-    "- $20k (KBRKitchenandBath). Major renovation between $40-$70k\n",
-    "- $20-$50k (cliq studios)\n",
-    "- $25k (HomeAdvisor)\n",
-    "- Midrange remodel, $30-$65k (DirectCabinets.com)\n",
-    "- Standard: $25k-$40k (Dulles Kitchen & Bath)\n",
-    "- $13k - $21k (HomeGuide)\n",
-    "-$40k (angi, formerly Angi's List)\n",
+    "- Average midrange ktichen remodel, 66k (2019, REmodeling Magazine)\n",
+    "- Major remodel (but not upscale), 69k (Home Depot)\n",
+    "- 20k (KBRKitchenandBath). Major renovation between 40-70k\n",
+    "- 20-50k (cliq studios)\n",
+    "- 25k (HomeAdvisor)\n",
+    "- Midrange remodel, 30-65k (DirectCabinets.com)\n",
+    "- Standard: 25k-40k (Dulles Kitchen & Bath)\n",
+    "- 13k - 21k (HomeGuide)\n",
+    "- 40k (angi, formerly Angi's List)\n",
     "\n",
-    "Going to use $40-$50k, even though the price range swings wildly."
+    "Going to use 40-50k, even though the price range swings wildly."
    ]
   },
   {
